--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link rel="shortcut icon" href="/assests/icon.png" type="image/x-icon">
-    <title>nija</title>
+    <title>ninja</title>
 </head>
 <body>
     <div class="lightning"></div>
@@ -30,6 +30,17 @@
         <button id="musicControl" class="music-button">
             <span>Play</span>
         </button>
+
+        <div class="abilities-container">
+            <button id="ability1" class="ability-button">Habilidade 1</button>
+            <button id="ability2" class="ability-button">Habilidade 2</button>
+            <button id="ability3" class="ability-button">Habilidade 3</button>
+        </div>
+
+        <div class="records-container">
+            <p>Vitórias: <span id="victories">0</span></p>
+            <p>Derrotas: <span id="defeats">0</span></p>
+        </div>
     </div>
 
     <div class="players">
