--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="lightning"></div>
-
+    
     <div class="health-bars">
-        <div class="health-bar">
+        <div class="health-bar" data-player="Player 1">
             <div class="health-bar-fill"></div>
         </div>
-        <div class="health-bar right">
+        <div class="health-bar right" data-player="Player 2">
             <div class="health-bar-fill"></div>
         </div>
     </div>
